# eink-esp-weather-display

./: README.md
esp/: .env  .gitignore  Cargo.toml  Justfile  README.md  export-esp.sh  sdkconfig.defaults
esp/.cargo/: config.toml
esp/src/: main.rs  request_image.rs  wifi.rs
render/: .gitignore  Cargo.toml  README.md  test.sh
render/scripts/: esp-weather-update.service  esp-weather-update.timer
render/src/: draw.rs  env_data.rs  main.rs  render.rs  tasks.rs  test_data.rs  text.rs  util.rs  weather.rs
