[package]
name = "halldisplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "^0.11", features = ["blocking",] }
chrono = "^0.4"
chrono-tz = "^0.8"
extrasafe = "^0.1.4"
serde_json = "^1"
image = "^0.24"
imageproc = "^0.23"
rusttype = "^0.9"

# must match epd
embedded-graphics = "0.7.1"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "f22b6e2c33173" }
